# awsshell

./: .gitignore  README.md  pyproject.toml
awsshell/: builtins.py  claude_assist.py  completer.py  iam.py  main.py  profiles.py  runner.py  shell.py
