[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "awsshell"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]
claude = ["anthropic>=0.40"]

[project.scripts]
awsshell = "awsshell.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["awsshell*"]
